_sass/_publications.scss
/*******************************************************************************
 * Publication and bibliography styles
 ******************************************************************************/

@use "variables" as v;

.publications {
  margin-top: 2rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 2rem;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
  }

  h2 {
    margin-bottom: 1rem;

    span {
      font-size: 1.5rem;
    }
  }

  h2.bibliography {
    color: var(--global-divider-color);
    text-align: right;
  }

  ol.bibliography {
    list-style: none;
    padding: 0;
    margin-top: 0;

    li {
      position: relative;
      margin-bottom: 0;
      padding-top: 0.6rem;
      padding-bottom: 0.6rem;

      .row {
        position: relative;
        margin-left: 0;
        margin-right: 0;

        &::before {
          content: "";
          position: absolute;
          left: 0;
          top: 0;
          bottom: 0;
          width: 1px;
          background-color: var(--global-text-color);
          opacity: 1;
        }
      }

      div[class^="col-"] {
        padding-left: 0.5rem;
        padding-right: 0;
      }

      .preview {
        display: inline-block;
      }

      .abbr {
        margin-bottom: 0.5rem;

        abbr {
          display: inline-block;
          background-color: var(--global-theme-color);
          margin-bottom: 0.5rem;
          color: var(--global-card-bg-color) !important;

          a {
            color: white;

            &:hover {
              text-decoration: none;
            }
          }
        }

        .award {
          color: var(--global-theme-color) !important;
          border: 1px solid var(--global-theme-color);
        }
      }

      .pub-title-row {
        display: flex;
        justify-content: space-between;
        align-items: flex-start;
        gap: 0;
      }

      .title {
        font-style: italic;
        font-weight: normal;
        font-family: "Roboto Serif", Georgia, "Times New Roman", Times, serif;
        display: block;
        flex: 1 1 auto;
        padding-right: 1rem;

        &::after {
          content: "";
        }
      }

      .pub-year {
        font-family: monospace;
        font-size: 0.8rem;
        color: var(--global-text-color);
        opacity: 0.6;
        white-space: nowrap;
        flex: 0 0 2.5rem;
        text-align: center;
        width: 2.5rem;
      }

      .author {
        display: block;
        margin-top: 0.01rem;
        font-size: 0.8rem;
        color: var(--global-text-color);
        opacity: 0.6;

        a {
          color: var(--global-text-color);
          border-bottom: 1px dashed var(--global-text-color);

          &:hover {
            border-bottom-style: solid;
            text-decoration: none;
          }
        }

        > em {
          font-style: normal;
          color: var(--global-text-color);
        }

        > span.more-authors {
          color: var(--global-text-color);
          text-decoration: underline;
          text-decoration-style: dashed;
          text-decoration-thickness: 1px;
          text-underline-offset: 3px;
          cursor: pointer;

          &:hover {
            text-decoration: none;
            opacity: 0.4;
          }
        }
      }

      .pub-venue {
        margin-top: 0.01rem;
        line-height: 1;
      }

      .pub-sep {
        margin: 0 0.4em;
        color: var(--global-text-color-light);
      }

      .periodical {
        display: inline;
        font-family: monospace;
        font-size: 0.8rem;
        text-transform: uppercase;
        letter-spacing: 0.03em;
        color: var(--global-text-color);
        opacity: 0.6;

        &:not(:empty)::before {
          content: "";
        }

        em {
          font-style: normal;
        }
      }

      .links {
        display: inline;

        a.btn {
          font-family: inherit;
          font-size: 0.8rem;
          font-weight: normal;
          text-transform: none;
          color: var(--global-text-color);
          background-color: transparent;
          border: none;
          border-radius: 0;
          padding: 0;
          margin: 0;
          box-shadow: none !important;
          text-decoration: underline;
          text-decoration-style: dashed;
          text-decoration-thickness: 1px;
          text-underline-offset: 3px;
          &:hover {
            text-decoration: none;
            opacity: 0.4;
          }
        }

        a.award.btn {
          color: var(--global-highlight-color);
        }
      }

      .badges {
        padding-bottom: 0.5rem;
        span {
          display: inline-block;
          color: v.$black-color;
          height: 100%;
          padding-right: 0.5rem;
          vertical-align: middle;

          &:hover {
            text-decoration: underline;
          }
        }
      }

      .hidden {
        font-size: 0.875rem;
        max-height: 0px;
        overflow: hidden;
        text-align: justify;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;

        p {
          line-height: 1.4em;
          margin: 10px;
        }

        pre {
          font-size: 1em;
          line-height: 1.4em;
          padding: 10px;
        }
      }

      .hidden.open {
        max-height: 100em;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;
      }

      div.abstract.hidden {
        border: dashed 1px var(--global-bg-color);
      }

      div.abstract.hidden.open {
        border-color: var(--global-text-color);
      }
    }
    div.award.hidden {
      border: dashed 1px var(--global-bg-color);
    }
    div.award.hidden.open {
      border-color: var(--global-highlight-color);
    }
  }
}

.citation,
.citation-number {
  color: var(--global-theme-color);
}

